<resources>
    <string name="app_name">FitnessLog</string>
    <string name="email">email</string>
    <string name="Password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <u>Sign up</u></string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signin">SignIn</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="track">Track</string>
    <string name="plan">Plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>